se anexan los documentos para la primera practica

--- a/pydicom/Pydicom.ipynb
+++ b/pydicom/Pydicom.ipynb
@@ -677,7 +677,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -699,7 +699,7 @@
       ],
       "source": [
         "#Extraer las claves, las etiquetas DICOM, que están en un archivo DICOM\n",
-        "dcm_data.keys()"
+        "dcm_data.keys()\n"
       ]
     },
     {
@@ -847,7 +847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -990,7 +990,7 @@
       ],
       "source": [
         "# Una lista alfabética de las palabras clave de los elementos en el conjunto de datos DICOM.\n",
-        "dcm_data. dir()"
+        "dcm_data.dir()"
       ]
     },
     {
@@ -1203,24 +1203,7 @@
           ]
         }
       ],
-      "source": [
-        "# Devuelve la palabra clave del elemento (si se conoce) como str\n",
-        "kwrds = ds[ 0x0010 , 0x0010 ].keyword\n",
-        "\n",
-        "# Devuelve el nombre del diccionario DICOM para el elemento como str\n",
-        "name = ds[ 0x0010 , 0x0010 ].name\n",
-        "\n",
-        "# Devuelve la representación del valor del elemento\n",
-        "vr = ds[ 0x0010 , 0x0010 ].VR\n",
-        "\n",
-        "# Devuelve el valor del elemento.\n",
-        "valor = ds[ 0x0010 , 0x0010 ].value\n",
-        "\n",
-        "print ( \"La palabra clave del elemento : \" , kwrds)\n",
-        "print ( \"El nombre del elemento : \" , name)\n",
-        "print ( \"La representación del valor del elemento : \" , vr)\n",
-        "print ( \"El valor del elemento : \" , valor)"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -1638,7 +1621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1854,7 +1837,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.21"
+      "version": "3.9.18"
     }
   },
   "nbformat": 4,
