Avance en el trabajo

--- a/Trabajo_1/Trabajo_1.ipynb
+++ b/Trabajo_1/Trabajo_1.ipynb
@@ -4,16 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trabajo 1 - Procesamiento Digital de Imágenes\n",
     "\n",
-    "Realizado por:\n",
-    "- Antonia Yepes\n",
-    "- Daniel Barrera\n"
+    "<img src=\"logo_udea.png\" alt=\"Logo UdeA\"\n",
+    "    style=\"width:150px; display:block; margin:0 auto 10px;\">\n",
+    "\n",
+    "<div style=\"text-align:center\">\n",
+    "\n",
+    "## Procesamiento Digital de Imágenes\n",
+    "\n",
+    "**Trabajo 1: Imágenes Médicas**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Antonia Yepes**  \n",
+    "**Daniel Barrera**\n",
+    "\n",
+    "</div>\n",
+    "</div>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +162,7 @@
        "(7fe0, 0010) Pixel Data                          OW: Array of 15242952 elements"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +195,7 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +307,7 @@
        " 'XRayTubeCurrent']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -352,11 +364,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Tag",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Type",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Value",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "19f58de4-8b8d-4afc-810d-441f2d8ff3b1",
+       "rows": [
+        [
+         "0",
+         "PatientName",
+         "(0010, 0010)",
+         "PN",
+         "anonymize"
+        ],
+        [
+         "1",
+         "Modality",
+         "(0008, 0060)",
+         "CS",
+         "CR"
+        ],
+        [
+         "2",
+         "ViewPosition",
+         "(0018, 5101)",
+         "CS",
+         "AP"
+        ],
+        [
+         "3",
+         "BodyPartExamined",
+         "(0018, 0015)",
+         "CS",
+         "CHEST"
+        ],
+        [
+         "4",
+         "RelativeXRayExposure",
+         "(0018, 1405)",
+         "IS",
+         "1194"
+        ],
+        [
+         "5",
+         "PhotometricInterpretation",
+         "(0028, 0004)",
+         "CS",
+         "MONOCHROME2"
+        ],
+        [
+         "6",
+         "Manufacturer",
+         "(0008, 0070)",
+         "LO",
+         "Carestream Health"
+        ],
+        [
+         "7",
+         "ManufacturerModelName",
+         "(0008, 1090)",
+         "LO",
+         ""
+        ]
+       ],
+       "shape": {
+        "columns": 4,
+        "rows": 8
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -455,7 +560,7 @@
        "7      ManufacturerModelName  (0008, 1090)   LO                             "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,6 +591,13 @@
     "\n",
     "metadata_df = pd.DataFrame(metadata, columns=['Name', 'Tag', 'Type', 'Value'])\n",
     "metadata_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación, mediante unas tablas se explica a qué hace referencia cada uno de estos atributos contenidos en el archivo, el grupo al que pertenece, su relevancia y los valores válidos para ese metadato."
    ]
   },
   {
@@ -574,12 +686,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Manufacturer\n",
+    "\n",
+    "| **Elemento**             | **Descripción**                                                                                                         |\n",
+    "|---------------------------|-------------------------------------------------------------------------------------------------------------------------|\n",
+    "| **Descripción del Atributo** | Especifica el nombre del fabricante del equipo que generó los datos de la imagen médica. Ayuda a garantizar compatibilidad y trazabilidad. |\n",
+    "| **Grupo**                | `(0008,xxxx)` agrupa metadatos sobre el estudio, serie y equipamiento involucrado en la adquisición de imágenes.         |\n",
+    "| **Relevancia**           | Obligatorio (Tipo 2). Debe estar presente, aunque puede estar vacío si la información es desconocida. Es útil para análisis técnicos y validación de protocolos. |\n",
+    "| **Valores Válidos**      | Debe ser una Long String (LO). Ejemplos:                                                                                |\n",
+    "|                           | - `GE MEDICAL SYSTEMS`                                                                                               |\n",
+    "|                           | - `SIEMENS`                                                                                                          |\n",
+    "|                           | - `Philips Medical Systems`                                                                                          |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Manufacturer's Model Name\n",
+    "\n",
+    "| **Elemento**             | **Descripción**                                                                                                         |\n",
+    "|---------------------------|-------------------------------------------------------------------------------------------------------------------------|\n",
+    "| **Descripción del Atributo** | Indica el nombre del modelo específico del equipo utilizado para adquirir o generar la imagen médica. Proporciona detalles técnicos adicionales al atributo Manufacturer. |\n",
+    "| **Grupo**                | `(0008,xxxx)` agrupa metadatos sobre el estudio, serie y equipamiento usado en la adquisición, como fabricante y modelo. |\n",
+    "| **Relevancia**           | Opcional (Tipo 3). Si está presente, permite identificar con mayor precisión el hardware utilizado.                     |\n",
+    "| **Valores Válidos**      | Debe ser una Long String (LO). Ejemplos:                                                                                |\n",
+    "|                           | - `GENESIS_SIGNA`                                                                                                     |\n",
+    "|                           | - `Aera`                                                                                                              |\n",
+    "|                           | - `Discovery CT750 HD`              "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La imagen médica evaluada fue adquirida mediante **radiografía computarizada (CR)**, una modalidad basada en el principio físico de la atenuación diferencial de los rayos X. Este principio establece que los tejidos del cuerpo absorben los rayos X en distintas proporciones según su densidad: por ejemplo, los huesos absorben más radiación que los pulmones, generando contrastes que permiten visualizar las estructuras anatómicas.\n",
+    "\n",
+    "El parámetro `Modality`, con valor CR, confirma que se utilizó una placa de fósforo fotoestimulable para captar la radiación tras atravesar el cuerpo, que luego fue digitalizada. El valor `AP` en el parámetro `ViewPosition` indica que la proyección fue anteroposterior, es decir, los rayos X ingresaron por la parte frontal del tórax y salieron por la espalda. Esta dirección de incidencia afecta cómo los rayos interactúan con los tejidos y, por lo tanto, cómo se representa la anatomía en la imagen.\n",
+    "\n",
+    "Por otra parte, el atributo `BodyPartExamined` indica que la región analizada fue el **CHEST (tórax)**, una zona que contiene órganos con diferentes densidades (como pulmones, corazón y costillas), lo que genera una amplia gama de absorciones de rayos X. El valor `1194` registrado en `RelativeXRayExposure` representa la cantidad relativa de radiación que alcanzó la placa. Este valor refleja la exposición necesaria para obtener una imagen con el contraste suficiente, sin sobreexponer ni subexponer la región torácica.\n",
+    "\n",
+    "Finalmente, el atributo `PhotometricInterpretation`, con valor `MONOCHROME2`, especifica que la imagen debe visualizarse en escala de grises. En esta codificación, las zonas que absorbieron más rayos X (como los huesos) se muestran en blanco, mientras que las estructuras menos densas (como los pulmones) aparecen más oscuras."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Visualización de la imagen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -778,6 +937,27 @@
     "plt.axis('off')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al comparar las tres imágenes médicas de Resonancia Magnética (RM),Radiografía Computarizada (CR) y Tomografía Computarizada (CT), notamos diferencias importantes tanto en calidad visual, como en resolución y contraste.\n",
+    "\n",
+    "***Calidad visual***\n",
+    "\n",
+    "La imagen de Resonancia Magnética (RM) se destaca por su nivel de detalle. Se pueden observar con gran claridad las vértebras, discos intervertebrales y hasta la médula espinal. Por otro lado, la Radiografía Computarizada (CR) muestra una imagen mucho más general. Aunque tiene una alta resolución en píxeles, no ofrece mucho detalle en profundidad ni en contraste, lo que la hace útil solo para una vista rápida del esqueleto. La Tomografía Computarizada (CT) ofrece una buena calidad visual, especialmente para ver los huesos. Las estructuras óseas se distinguen fácilmente, aunque los tejidos blandos no se ven tan bien como en la RM. Esta puede ser una herramienta común en casos de traumas o cuando se necesita un diagnóstico rápido.\n",
+    "\n",
+    "***Resolución y espaciado***\n",
+    "\n",
+    "Si hablamos de resolución, la CR tiene las dimensiones más grandes (2828 x 2320 píxeles), lo que le da una imagen muy amplia. La RM tiene un tamaño intermedio (640 x 640), mientras que la CT tiene dimensiones más pequeñas (512 x 512), pero con una gran cantidad de cortes (93 en total), lo que permite analizar el cuerpo en secciones muy detalladas.\n",
+    "\n",
+    "En cuanto al espaciado de cada imagen (que nos dice qué tan finos son los detalles que puede capturar), la CR tiene el más pequeño, lo que sugiere buena resolución teórica. Sin embargo, como vimos, el contraste no es tan bueno, así que esa ventaja no siempre se aprovecha. La RM y la CT tienen un espaciado un poco mayor, pero suficiente para ofrecer buenos niveles de detalle.\n",
+    "\n",
+    "***Contraste***\n",
+    "\n",
+    "En contraste, la RM es la que mejor permite distinguir diferentes tipos de tejidos, por eso es tan útil en neurología o para ver músculos y órganos. La CT tiene un contraste decente, ideal para distinguir huesos y algunas estructuras blandas. En cambio, la CR es la que ofrece el contraste más limitado; lo que se ve bien ahí es principalmente tejido óseo."
    ]
   },
   {
