Se anexa el flujo imagenologico

--- a/Trabajo_1/Trabajo_1.ipynb
+++ b/Trabajo_1/Trabajo_1.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Analisis de metadatos DICOM y visualización"
+    "## **1. Analisis de metadatos DICOM y visualización**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para esta primera parte del trabajo se tiene una imagen en formato DICOM de cierta modalidad, por lo que se va a realizar una extracción de los metadatos para posteriormente hacer un analisis de la imagen."
    ]
   },
   {
@@ -186,27 +193,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# se leen los keywords\n",
-    "'Scanner Model' in dcm_data.dir()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -320,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En la metadata de nuestra imagen no se encontraba el termino de `'Scanner Model'`. Este termino generalmente se refiere al modelo del equipo utilizado para adquirir la imagen. El keyword estándar para esto es `'ManufacturerModelName'`\n",
+    "En la metadata de nuestra imagen no se encontraba el termino de `'Scanner Model'`, que es un termino que generalmente se refiere al modelo del equipo utilizado para adquirir la imagen. El keyword estándar para esto es `'ManufacturerModelName'` [1]\n",
     "\n",
     "Por otro lado se ha notado que los terminos `'Detector Active Shape'` (Se refiere a la forma geométrica del área activa del detector de imagen) y `'Detector Description'` (Se refiere a una descripción textual que proporciona detalles adicionales sobre el detector de imagen) no se encontraban en la metadata de la imagen. La ausencia estos términos en los data elements del archivo DICOM analizado se debe a que la inclusión de determinados atributos en la metadata depende tanto del fabricante del equipo como de la modalidad y configuración utilizada durante la adquisición de la imagen. No todos los campos definidos por el estándar DICOM son obligatorios para todos los estudios, por lo que es común que algunos atributos específicos no estén presentes si el equipo no los registra o si no son requeridos para ese tipo de procedimiento [1]. Por esta razón, dichos términos no aparecen entre los keywords disponibles en la metadata del archivo evaluado."
    ]
@@ -360,6 +346,13 @@
     "\n",
     "for i in data_elements:\n",
     "    print(dcm_data.data_element(i))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuacion se genera un dataframe que contiene la informacion de cada atributo del archivo"
    ]
   },
   {
@@ -597,7 +590,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A continuación, mediante unas tablas se explica a qué hace referencia cada uno de estos atributos contenidos en el archivo, el grupo al que pertenece, su relevancia y los valores válidos para ese metadato."
+    "A continuación, mediante unas tablas se explica a qué hace referencia cada uno de estos atributos contenidos en el archivo, el grupo al que pertenece, su relevancia y los valores válidos para ese metadato. La informacion suministrada a partir del sitio web 'dicom.innolitics.com' [2], que es un navegador del estándar DICOM, creado por Innolitics, que facilita la navegación por este estándar para desarrolladores de software, investigadores y radiólogos. Tambien se complementa la informacion mediante el sitio web oficial del estandar DICOM [3]."
    ]
   },
   {
@@ -720,9 +713,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La imagen médica evaluada fue adquirida mediante **radiografía computarizada (CR)**, una modalidad basada en el principio físico de la atenuación diferencial de los rayos X. Este principio establece que los tejidos del cuerpo absorben los rayos X en distintas proporciones según su densidad: por ejemplo, los huesos absorben más radiación que los pulmones, generando contrastes que permiten visualizar las estructuras anatómicas.\n",
+    "La imagen médica evaluada fue adquirida mediante **radiografía computarizada (CR)**, una modalidad basada en el principio físico de la atenuación diferencial de los rayos X. Este principio establece que los tejidos del cuerpo absorben los rayos X en distintas proporciones según su densidad: por ejemplo, los huesos absorben más radiación que los pulmones, generando contrastes que permiten visualizar las estructuras anatómicas [4].\n",
     "\n",
-    "El parámetro `Modality`, con valor CR, confirma que se utilizó una placa de fósforo fotoestimulable para captar la radiación tras atravesar el cuerpo, que luego fue digitalizada. El valor `AP` en el parámetro `ViewPosition` indica que la proyección fue anteroposterior, es decir, los rayos X ingresaron por la parte frontal del tórax y salieron por la espalda. Esta dirección de incidencia afecta cómo los rayos interactúan con los tejidos y, por lo tanto, cómo se representa la anatomía en la imagen.\n",
+    "El parámetro `Modality`, con valor CR, confirma que se utilizó una placa de fósforo fotoestimulable para captar la radiación tras atravesar el cuerpo, que luego fue digitalizada. El valor `AP` en el parámetro `ViewPosition` indica que la proyección fue anteroposterior, es decir, los rayos X ingresaron por la parte frontal del tórax y salieron por la espalda [4]. Esta dirección de incidencia afecta cómo los rayos interactúan con los tejidos y, por lo tanto, cómo se representa la anatomía en la imagen.\n",
     "\n",
     "Por otra parte, el atributo `BodyPartExamined` indica que la región analizada fue el **CHEST (tórax)**, una zona que contiene órganos con diferentes densidades (como pulmones, corazón y costillas), lo que genera una amplia gama de absorciones de rayos X. El valor `1194` registrado en `RelativeXRayExposure` representa la cantidad relativa de radiación que alcanzó la placa. Este valor refleja la exposición necesaria para obtener una imagen con el contraste suficiente, sin sobreexponer ni subexponer la región torácica.\n",
     "\n",
@@ -738,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +750,8 @@
     "\n",
     "plt.figure(figsize=(8, 8))\n",
     "plt.imshow(img, cmap='gray')\n",
-    "plt.title('Radiografía Computarizada de pecho')\n",
+    "plt.title('Radiografía Computarizada de torax')\n",
+    "plt.axis('off')\n",
     "plt.show()"
    ]
   },
@@ -765,19 +759,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Comparación multimodal de imágenes"
+    "## **2. Comparación multimodal de imágenes**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para esta sección del trabajo se tienen tres estudios de una misma persona (una RM, una TC y una RX) del mismo segmento corporal. Dos de los estudios cuentan con un directorio que contiene multiples archivos DICOM, por lo cual se puede inferir que se trata los diferentes cortes (slices) de la imagen. Esto da a entender que esos dos directorios corresponden tanto al estudio de Resonancia Magnética, como al de Tomografía Computarizada. Esto se puede asumir porque tanto la Resonancia Magnética (MR) como la Tomografía Computarizada (TC) generan estudios volumétricos compuestos por múltiples cortes (slices), cada uno almacenado como un archivo DICOM independiente [2], a diferencia de la radiografía (RX) que usualmente es una sola imagen. Para verificar que esto es asi, a continuación se lee la información contenida en los archivos DICOM para cada modalidad, especificamente al leer el data_element correspondiente a `'Modality'`."
+    "Para esta sección del trabajo se tienen tres estudios de una misma persona (una RM, una TC y una RX) del mismo segmento corporal. Dos de los estudios cuentan con un directorio que contiene multiples archivos DICOM, por lo cual se puede inferir que se trata los diferentes cortes (slices) de la imagen. Esto da a entender que esos dos directorios corresponden tanto al estudio de Resonancia Magnética, como al de Tomografía Computarizada. Esto se puede asumir porque tanto la Resonancia Magnética (MR) como la Tomografía Computarizada (TC) generan estudios volumétricos compuestos por múltiples cortes (slices), cada uno almacenado como un archivo DICOM independiente [5], a diferencia de la radiografía (RX) que usualmente es una sola imagen. Para verificar que esto es asi, a continuación se lee la información contenida en los archivos DICOM para cada modalidad, especificamente al leer el data_element correspondiente a `'Modality'`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -810,14 +804,12 @@
     "\n",
     "A continuacion se procede a realizar una comparacion de la imagen entre las tres modalidades, haciendo uso de la informacion dentro de la metadata y la visualizacion de las tres imagenes. En particular, para la visualizacion de las imagenes se tomó como referencia la informacion que muestra la imagen CR, ya que esta cuenta con un solo archivo DICOM. Por ende, se ha decidido que tanto para la imagen RM y CT se va a visualizar el corte central se la serie, ya que este me puede dar informacion mas representativa del mismo segmento corporal.\n",
     "\n",
-    "- Calidad visual\n",
-    "- Resolución numérica (shape de la imagen, spacing, etc.)\n",
-    "- Diferencias de contraste percibidas"
+    "Para obtener el corte central de la serie, se decide ordenar los archivos DICOM según el atributo `'InstanceNumber'` presente en la metadata de cada archivo. Este atributo indica la posición unica de cada corte dentro del estudio, que generalmente termina siendo una posicion secuencial [3]. Lo que permitiría organizar los cortes desde el primero hasta el último de manera coherente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -943,32 +935,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Al comparar las tres imágenes médicas de Resonancia Magnética (RM),Radiografía Computarizada (CR) y Tomografía Computarizada (CT), notamos diferencias importantes tanto en calidad visual, como en resolución y contraste.\n",
+    "Al comparar las tres imágenes médicas de Resonancia Magnética (RM), Radiografía Computarizada (CR) y Tomografía Computarizada (CT), notamos diferencias importantes tanto en calidad visual, como en resolución y contraste.\n",
     "\n",
     "***Calidad visual***\n",
     "\n",
-    "La imagen de Resonancia Magnética (RM) se destaca por su nivel de detalle. Se pueden observar con gran claridad las vértebras, discos intervertebrales y hasta la médula espinal. Por otro lado, la Radiografía Computarizada (CR) muestra una imagen mucho más general. Aunque tiene una alta resolución en píxeles, no ofrece mucho detalle en profundidad ni en contraste, lo que la hace útil solo para una vista rápida del esqueleto. La Tomografía Computarizada (CT) ofrece una buena calidad visual, especialmente para ver los huesos. Las estructuras óseas se distinguen fácilmente, aunque los tejidos blandos no se ven tan bien como en la RM. Esta puede ser una herramienta común en casos de traumas o cuando se necesita un diagnóstico rápido.\n",
+    "La imagen de Resonancia Magnética se destaca por su nivel de detalle. Se pueden observar con gran claridad las vértebras, discos intervertebrales y hasta la médula espinal. Por otro lado, la Radiografía Computarizada muestra una imagen mucho más general. Aunque tiene una alta resolución en píxeles, no ofrece mucho detalle en profundidad ni en contraste, lo que la hace útil solo para una vista rápida del esqueleto. La Tomografía Computarizada ofrece una buena calidad visual, especialmente para ver los huesos. Las estructuras óseas se distinguen fácilmente, aunque los tejidos blandos no se ven tan bien como en la RM. Esta puede ser una herramienta común en casos de traumas o cuando se necesita un diagnóstico rápido.\n",
     "\n",
     "***Resolución y espaciado***\n",
     "\n",
     "Si hablamos de resolución, la CR tiene las dimensiones más grandes (2828 x 2320 píxeles), lo que le da una imagen muy amplia. La RM tiene un tamaño intermedio (640 x 640), mientras que la CT tiene dimensiones más pequeñas (512 x 512), pero con una gran cantidad de cortes (93 en total), lo que permite analizar el cuerpo en secciones muy detalladas.\n",
     "\n",
-    "En cuanto al espaciado de cada imagen (que nos dice qué tan finos son los detalles que puede capturar), la CR tiene el más pequeño, lo que sugiere buena resolución teórica. Sin embargo, como vimos, el contraste no es tan bueno, así que esa ventaja no siempre se aprovecha. La RM y la CT tienen un espaciado un poco mayor, pero suficiente para ofrecer buenos niveles de detalle.\n",
+    "En cuanto al espaciado de cada imagen (que nos dice qué tan finos son los detalles que puede capturar), la CR tiene el más pequeño, lo que sugiere buena resolución teórica. Sin embargo, como vemos, el contraste no es tan bueno, así que esa ventaja no siempre se aprovecha. La RM y la CT tienen un espaciado un poco mayor, pero suficiente para ofrecer buenos niveles de detalle.\n",
     "\n",
     "***Contraste***\n",
     "\n",
-    "En contraste, la RM es la que mejor permite distinguir diferentes tipos de tejidos, por eso es tan útil en neurología o para ver músculos y órganos. La CT tiene un contraste decente, ideal para distinguir huesos y algunas estructuras blandas. En cambio, la CR es la que ofrece el contraste más limitado; lo que se ve bien ahí es principalmente tejido óseo."
+    "En contraste, la RM es la que mejor permite distinguir diferentes tipos de tejidos, por eso es tan útil en neurología o para ver músculos y órganos [6]. La CT tiene un contraste decente, ideal para distinguir huesos y algunas estructuras blandas. En cambio, la CR es la que ofrece el contraste más limitado, por lo que se ve bien ahí es principalmente tejido óseo."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Referencias\n",
+    "## 3. **Simulación de flujo de información imagenológica**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para esta ultima parte del trabajo se hace el diseño de un diagrama de flujo que representa el recorrido de una imagen médica, desde su\n",
+    "solicitud hasta la visualización e informe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Referencias**\n",
     "\n",
     "[1] Bidgood Jr, W. D., Horii, S. C., Prior, F. W., & Van Syckle, D. E. (1997). Understanding and using DICOM, the data interchange standard for biomedical imaging. Journal of the American Medical Informatics Association, 4(3), 199-212.\n",
     "\n",
-    "[2] Ramos Núñez, Oswaldo & villareal, manuel & angel, nairubia. (2014). SISTEMA DE ARCHIVO Y COMUNICACIÓN DE IMÁGENES EN UNA UNIDAD DE IMAGENOLOGIA (File system and communication of images in a Imaging Unit). Revista Electrónica Facultad de Ingeniería UVM. Volumen 8. 1109. "
+    "[2] Innolitics LLC, DICOM Standard Browser. [Online]. Disponible: https://dicom.innolitics.com/ciods. Accedido: 21 de abril de 2025.\n",
+    "\n",
+    "[3] DICOM Standard. [Online]. Disponible: https://www.dicomstandard.org/current.\n",
+    "\n",
+    "[4] Rowlands, J. A. (2002). The physics of computed radiography. Physics in medicine & biology, 47(23), R123.\n",
+    "\n",
+    "[5] Ramos Núñez, Oswaldo & villareal, manuel & angel, nairubia. (2014). SISTEMA DE ARCHIVO Y COMUNICACIÓN DE IMÁGENES EN UNA UNIDAD DE IMAGENOLOGIA (File system and communication of images in a Imaging Unit). Revista Electrónica Facultad de Ingeniería UVM. Volumen 8. 1109. \n",
+    "\n",
+    "[6] Rivera, D. M., Puentes, S., & Caballero, L. (2011). Resonancia magnética cerebral: secuencias básicas e interpretación. Universitas Médica, 52(3), 292-306."
    ]
   }
  ],
