--- a/Trabajo_1/Trabajo_1.ipynb
+++ b/Trabajo_1/Trabajo_1.ipynb
@@ -971,6 +971,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "<img src=\"Flujo.png\" alt=\"Flujo de información imagenológica\" style=\"display:block; margin:auto; max-width:90%;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Referencias**\n",
     "\n",
     "[1] Bidgood Jr, W. D., Horii, S. C., Prior, F. W., & Van Syckle, D. E. (1997). Understanding and using DICOM, the data interchange standard for biomedical imaging. Journal of the American Medical Informatics Association, 4(3), 199-212.\n",
