simulacion del flujo

--- a/Trabajo_1/Trabajo_1.ipynb
+++ b/Trabajo_1/Trabajo_1.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
     }
    ],
    "source": [
-    "# se definen los datos de acuerdo a la modalidad\n",
+    "# se definen los atributos que se quieren extraer\n",
     "data_elements = [\n",
     "    'PatientName',\n",
     "    'Modality',\n",
@@ -590,7 +590,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A continuación, mediante unas tablas se explica a qué hace referencia cada uno de estos atributos contenidos en el archivo, el grupo al que pertenece, su relevancia y los valores válidos para ese metadato. La informacion suministrada a partir del sitio web 'dicom.innolitics.com' [2], que es un navegador del estándar DICOM, creado por Innolitics, que facilita la navegación por este estándar para desarrolladores de software, investigadores y radiólogos. Tambien se complementa la informacion mediante el sitio web oficial del estandar DICOM [3]."
+    "A continuación, mediante unas tablas se explica a qué hace referencia cada uno de estos atributos contenidos en el archivo, el grupo al que pertenece, su relevancia y los valores válidos para ese metadato. La informacion es suministrada a partir del sitio web 'dicom.innolitics.com' [2], que es un navegador del estándar DICOM creado por Innolitics, que facilita la navegación por este estándar para desarrolladores de software, investigadores y radiólogos. Tambien se complementa la informacion mediante el sitio web oficial del estandar DICOM [3]."
    ]
   },
   {
@@ -717,7 +717,7 @@
     "\n",
     "El parámetro `Modality`, con valor CR, confirma que se utilizó una placa de fósforo fotoestimulable para captar la radiación tras atravesar el cuerpo, que luego fue digitalizada. El valor `AP` en el parámetro `ViewPosition` indica que la proyección fue anteroposterior, es decir, los rayos X ingresaron por la parte frontal del tórax y salieron por la espalda [4]. Esta dirección de incidencia afecta cómo los rayos interactúan con los tejidos y, por lo tanto, cómo se representa la anatomía en la imagen.\n",
     "\n",
-    "Por otra parte, el atributo `BodyPartExamined` indica que la región analizada fue el **CHEST (tórax)**, una zona que contiene órganos con diferentes densidades (como pulmones, corazón y costillas), lo que genera una amplia gama de absorciones de rayos X. El valor `1194` registrado en `RelativeXRayExposure` representa la cantidad relativa de radiación que alcanzó la placa. Este valor refleja la exposición necesaria para obtener una imagen con el contraste suficiente, sin sobreexponer ni subexponer la región torácica.\n",
+    "Por otra parte, el atributo `BodyPartExamined` indica que la región analizada fue el `CHEST` (tórax), una zona que contiene órganos con diferentes densidades (como pulmones, corazón y costillas), lo que genera una amplia gama de absorciones de rayos X. El valor `1194` registrado en `RelativeXRayExposure` representa la cantidad relativa de radiación que alcanzó la placa. Este valor refleja la exposición necesaria para obtener una imagen con el contraste suficiente, sin sobreexponer ni subexponer la región torácica.\n",
     "\n",
     "Finalmente, el atributo `PhotometricInterpretation`, con valor `MONOCHROME2`, especifica que la imagen debe visualizarse en escala de grises. En esta codificación, las zonas que absorbieron más rayos X (como los huesos) se muestran en blanco, mientras que las estructuras menos densas (como los pulmones) aparecen más oscuras."
    ]
@@ -759,6 +759,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "La imagen médica visualizada, ejemplifica la aplicación del principio físico de atenuación diferencial de rayos X. La proyección anteroposterior (AP) refleja una trayectoria de los rayos X desde el frente hacia la espalda, optimizando la visualización de estructuras torácicas como costillas, corazón y pulmones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **2. Comparación multimodal de imágenes**"
    ]
   },
@@ -766,7 +773,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para esta sección del trabajo se tienen tres estudios de una misma persona (una RM, una TC y una RX) del mismo segmento corporal. Dos de los estudios cuentan con un directorio que contiene multiples archivos DICOM, por lo cual se puede inferir que se trata los diferentes cortes (slices) de la imagen. Esto da a entender que esos dos directorios corresponden tanto al estudio de Resonancia Magnética, como al de Tomografía Computarizada. Esto se puede asumir porque tanto la Resonancia Magnética (MR) como la Tomografía Computarizada (TC) generan estudios volumétricos compuestos por múltiples cortes (slices), cada uno almacenado como un archivo DICOM independiente [5], a diferencia de la radiografía (RX) que usualmente es una sola imagen. Para verificar que esto es asi, a continuación se lee la información contenida en los archivos DICOM para cada modalidad, especificamente al leer el data_element correspondiente a `'Modality'`."
+    "Para esta sección del trabajo se tienen tres estudios de una misma persona (una RM, una TC y una RX) del mismo segmento corporal. Dos de los estudios cuentan con un directorio que contiene multiples archivos DICOM, por lo cual se puede inferir que se trata los diferentes cortes (slices) de la imagen. Esto da a entender que esos dos directorios corresponden tanto al estudio de Resonancia Magnética, como al de Tomografía Computarizada. Esto se puede asumir porque tanto la Resonancia Magnética (MR) como la Tomografía Computarizada (TC) generan estudios volumétricos compuestos por múltiples cortes (slices), cada uno almacenado como un archivo DICOM independiente [5], a diferencia de la radiografía (RX) que usualmente es una sola imagen. \n",
+    "\n",
+    "Para verificar que esto es asi, a continuación se lee la información contenida en los archivos DICOM para cada modalidad, especificamente al leer el data_element correspondiente a `'Modality'`."
    ]
   },
   {
